--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [L]
 
-#AddDefaultCharset UTF-8
+#`AddDefaultCharset UTF-8
